[fix] change style and add scrollbar -  ExpandableGrid

--- a/react_app/src/App.css
+++ b/react_app/src/App.css
@@ -4,9 +4,7 @@
   box-sizing: border-box;
   text-decoration: none;
 }
-*::-webkit-scrollbar {
-  display: none;
-}
+
 
 .App {
 }
