--- a/react_app/src/components/common/accordionTest/accordion.css
+++ b/react_app/src/components/common/accordionTest/accordion.css
@@ -1,38 +1,36 @@
-
 .accordion__container {
   display: flex;
   width: 100%;
-  height: 100vh;
   flex-direction: column;
   background-color: #ffffff;
 }
 
 .accordion__container--item {
-    margin-bottom: 0.3rem;
+  margin-bottom: 0.3rem;
 }
 
 .accordion__title {
-    display: flex;
-    cursor: pointer;
-    justify-content: space-between;
-    width: 100%;
-    padding:1rem;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
-    font-weight: 700;
+  display: flex;
+  cursor: pointer;
+  justify-content: space-between;
+  width: 100%;
+  padding: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
+    rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+  font-weight: 700;
 }
 
 .accordion__icon {
-    font-size: 0.8rem;
+  font-size: 0.8rem;
 }
 
 .accordion__container--child {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 1rem;
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
-
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  height: 85vh;
+  width: 100%;
+  overflow: hidden;
 }
